Counting required ingredients to buy added

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,7 +53,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_3">
+             <widget class="QPushButton" name="btnDeleteRecipe">
               <property name="text">
                <string>Delete Recipe</string>
               </property>
